# story-time

./: .gitignore
audiobooker/: .env  .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  app.py  cli.py  docker-compose.yml  download_coqui.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_engines.py
audiobooker/.github/workflows/: ci.yml
audiobooker/pipeline/: chunker.py  export.py  loudness.py  post.py
audiobooker/samples/: sample.txt
audiobooker/tests/: test_book_loader.py  test_book_loader_epub.py  test_book_loader_epub_pdf.py  test_book_loader_pdf.py  test_cache.py  test_chunker.py  test_cli_postprocessing.py  test_export.py  test_loudness.py
audiobooker/tts_engines/: __init__.py  base.py  coqui_engine.py  piper_engine.py  pyttsx3_engine.py
audiobooker/utils/: book_loader.py  cache.py  epub_pdf.py  voice_discovery.py
