[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobooker"
version = "0.2.0"
description = "Local Audiobook Generator"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
audiobooker = "audiobooker.cli:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = [
  "E203",  # whitespace before ':'
  "E501",  # line too long (handled by formatter)
]
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["audiobooker"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false